// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should configure a unique rule correctly with inline false 1`] = `
Object {
  "test": /\\\\\\.svg\\$/,
  "use": Array [
    Object {
      "loader": "url-loader",
      "options": Object {
        "emitFile": false,
        "limit": 0,
        "name": "images/[name].[ext]",
        "outputPath": "static/chunks/media",
        "publicPath": "_next/static/chunks/media",
      },
    },
    Object {
      "loader": "svgo-loader",
      "options": Object {
        "plugins": Array [
          Object {
            "removeTitle": true,
          },
          Object {
            "removeDimensions": false,
          },
          Object {
            "removeViewBox": false,
          },
          Object {
            "cleanupIDs": false,
          },
        ],
      },
    },
  ],
}
`;

exports[`should configure a unique rule correctly with inline true 1`] = `
Object {
  "test": /\\\\\\.svg\\$/,
  "use": Array [
    Object {
      "loader": "raw-loader",
    },
    Object {
      "loader": "svgo-loader",
      "options": Object {
        "plugins": Array [
          Object {
            "removeTitle": true,
          },
          Object {
            "removeDimensions": false,
          },
          Object {
            "removeViewBox": false,
          },
          Object {
            "cleanupIDs": false,
          },
        ],
      },
    },
    Object {
      "loader": "svg-css-modules-loader",
      "options": Object {
        "transformId": true,
      },
    },
  ],
}
`;
